--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,62 +1,154 @@
-* { font-family: sans-serif; }
+* {
+    font-family: 'IBM Plex Mono', monospace;
+    box-sizing: border-box;
+}
 
-html, body {
-    height: 100vh;
+html {
+    font-size: 62.5%;
+}
+
+body {
+    height: 88vh;
     margin: 0;
-    padding: 0
+    padding: 0;
+    user-select: none;
+    -webkit-user-drag: none;
+}
+
+p {
+    font-size: 1.8rem;
+}
+
+/* HEADER */
+
+#header {
+    display: flex;
+    justify-content: center;
+    border-bottom: 3px solid black;
+    align-items: center;
+    height: 12vh;
+}
+
+#logo {
+    user-select: none;
+    -webkit-user-drag: none;
+    height: calc(12vh - 25px);
+}
+
+/* MAP */
+
+#content {
+    padding: 20px;
+    height: 88vh;
+}
+
+#map-window {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    height: calc(88vh - 40px);
+}
+
+#arrow {
+    cursor: pointer;
+    position: absolute;
+    font-size: 4rem;
+    color: white;
+    width: 40px;
+    height: 40px;
+    z-index: 3;
+    top: 5px;
+    left: 5px;
+    transition-timing-function: ease-in-out;
+    transition-duration: .8s;
 }
 
 #map {
-    height: 100vh;
-    z-index: 1
-}
-
-/* CREATE EVENT MODAL */
-
-#modal-window {
-    display: none;
     position: absolute;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 100%;
-    bottom: 0;
-    z-index: 5
+    border-radius: 20px;
+    box-shadow: 0 0 13px rgba(0, 0, 0, 0.7);
+    height: calc(88vh - 40px);
+    width: calc(100vw - 40px);
+    transition-timing-function: ease-in-out;
+    transition-duration: .8s;
 }
 
-#create-event {
+#glass {
+    pointer-events: none;
+    position: absolute;
+    border-radius: 20px;
+    box-shadow: inset 0 5px 10px rgba(255, 255, 255, 0.4),
+        inset 5px 0 10px rgba(255, 255, 255, 0.4),
+        inset 0 -5px 10px rgba(255, 255, 255, 0.4),
+        inset -5px 0 10px rgba(255, 255, 255, 0.4);
+    height: calc(88vh - 40px);
+    width: calc(100vw - 40px);
+    transition-timing-function: ease-in-out;
+    transition-duration: .8s;
+}
+
+/* CREATE EVENT MENU */
+
+#menu {
+    position: absolute;
     display: flex;
     flex-direction: column;
-    background-color: white;
-    border: 1px solid #dadce0;
-    box-shadow: 0 0 10px white;
+    background-color: #f5f5f5;
     border-radius: 20px;
-    top: 25vh;
-    left: 25vw;
-    height: 50vh;
-    width: 50vw;
+    padding: 20px;
+    height: calc(88vh - 40px);
+    width: calc(30vw - 40px);
 }
 
-#close-modal {
-    font-size: 25px;
-    font-weight: bolder;
-    background-color: white;
-    width: 25px;
-    height: 25px;
-    border-radius: 100%;
-    margin: 11px 0 0 calc(100% - 35px);
+#menu-coords {
+    background-color: #eaeaea;
+    color: #888;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 20px;
+    user-select: text;
+    -webkit-user-drag: all;
+}
+
+#event {
+    font-size: large;
     border: none;
-    padding: 0;
-    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
+    padding: 15px 10px;
+    margin: 20px 0;
 }
 
-#name-input {
-    height: 10%;
-    margin: 5%;
-    font-size:24px;
-    padding: 1%;
-    border-radius: 20px;
+#desc {
+    font-size: large;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
+    padding: 7px 10px;
+    resize: none;
+}
+
+#event:focus-visible,
+#desc:focus-visible {
+    outline: none;
+}
+
+#event::placeholder,
+#desc::placeholder {
+    color: #ddd
+}
+
+#char-count-display {
+    font-weight: bold;
+    text-align: end;
+}
+
+#menu-button {
+    position: absolute;
+    align-self: center;
+    bottom: 20px;
+    width: 50%;
 }
 
 /* MARKER MODAL */
@@ -65,8 +157,9 @@ html, body {
     position: absolute;
     display: none;
     justify-content: center;
-    width: 100%;
-    bottom: 0;
+    width: calc(100vw - 40px);
+    min-width: calc(70vw - 40px);
+    bottom: 40px;
 }
 
 #modal-content {
@@ -75,38 +168,37 @@ html, body {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 3px white;
-    padding: 10px 50px;
+    padding: 10px 20px;
     height: fit-content;
     width: 40vw;
-    bottom: 0;
     z-index: 5
 }
 
 #modal-title {
     font-weight: bold;
+    user-select: text;
+    -webkit-user-drag: all;
 }
 
-#modal-button {
-    background-color: white;
-    border: 1px solid #dadce0;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
-    color: #1a73e8;
+/* BUTTONS */
+
+.button {
+    background-color: #1a73e8;
+    border: none;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
+    color: white;
     border-radius: 5px;
     text-transform: uppercase;
     padding: 15px;
     cursor: pointer;
 }
-#modal-button:hover {
-    background-color: rgba(66, 133, 244, .04);
-    border: 1px solid #d2e3fc;
+
+.button:hover {
+    background-color: #1768d1;
+    border: none;
 }
-#modal-button:active {
-    background-color: rgba(66,133,244,.16);
-    border: 1px solid #d2e2fd;
-    -webkit-box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
-                        0 1px 3px 1px rgb(60 64 67 / 15%);
-    -moz-box-shadow: 0 1px 2px 0 rgba(60,64,67,.3),
-                     0 1px 3px 1px rgba(60,64,67,.15);
-    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
-                0 1px 3px 1px rgb(60 64 67 / 15%);
+
+.button:active {
+    background-color: #155fc0;
+    border: none;
 }
