--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,3 +1,7 @@
+:root {
+    --grayBackground: #f5f5f5;
+}
+
 * {
     font-family: 'IBM Plex Mono', monospace;
     box-sizing: border-box;
@@ -8,45 +12,62 @@ html {
 }
 
 body {
-    height: 88vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
     margin: 0;
-    padding: 0;
+    padding: 2rem;
     user-select: none;
     -webkit-user-drag: none;
+    height: 100vh;
 }
 
 p {
     font-size: 1.8rem;
+    font-weight: 100;
 }
 
 /* HEADER */
 
 #header {
     display: flex;
-    justify-content: center;
-    border-bottom: 3px solid black;
     align-items: center;
-    height: 12vh;
+    height: 7rem;
+    width: 100%;
+    padding: 1.5rem;
+    border-radius: 2rem;
+    overflow: hidden;
+    background-color: var(--grayBackground);
 }
 
 #logo {
     user-select: none;
     -webkit-user-drag: none;
-    height: calc(12vh - 25px);
+    height: 100%;
 }
 
 /* MAP */
 
 #content {
-    padding: 20px;
-    height: 88vh;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    --sideBarSize: 30%;
+    --mapGap: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
 }
 
 #map-window {
     position: relative;
     display: flex;
     justify-content: flex-end;
-    height: calc(88vh - 40px);
+    height: 100%;
+    width: 100%;
+    transition: width 0.5s ease-in-out;
 }
 
 #arrow {
@@ -54,37 +75,35 @@ p {
     position: absolute;
     font-size: 4rem;
     color: white;
-    width: 40px;
-    height: 40px;
+    width: 1rem;
+    height: 1rem;
     z-index: 3;
-    top: 5px;
-    left: 5px;
-    transition-timing-function: ease-in-out;
-    transition-duration: .8s;
+    top: 0.25rem;
+    left: 0.1rem;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    filter: drop-shadow(0 0 0.25rem black);
 }
 
 #map {
     position: absolute;
     border-radius: 20px;
-    box-shadow: 0 0 13px rgba(0, 0, 0, 0.7);
-    height: calc(88vh - 40px);
-    width: calc(100vw - 40px);
-    transition-timing-function: ease-in-out;
-    transition-duration: .8s;
+    box-shadow: 0 0 1rem rgba(104, 104, 104, 0.651);
+    height: 100%;
+    width: 100%;
 }
 
 #glass {
     pointer-events: none;
     position: absolute;
     border-radius: 20px;
-    box-shadow: inset 0 5px 10px rgba(255, 255, 255, 0.4),
+    /* box-shadow: inset 0 5px 10px rgba(255, 255, 255, 0.4),
         inset 5px 0 10px rgba(255, 255, 255, 0.4),
         inset 0 -5px 10px rgba(255, 255, 255, 0.4),
-        inset -5px 0 10px rgba(255, 255, 255, 0.4);
-    height: calc(88vh - 40px);
-    width: calc(100vw - 40px);
-    transition-timing-function: ease-in-out;
-    transition-duration: .8s;
+        inset -5px 0 10px rgba(255, 255, 255, 0.4); */
+    height: 100%;
+    width: 100%;
+    transition: width 0.5s ease-in-out;
 }
 
 /* CREATE EVENT MENU */
@@ -93,11 +112,14 @@ p {
     position: absolute;
     display: flex;
     flex-direction: column;
-    background-color: #f5f5f5;
-    border-radius: 20px;
-    padding: 20px;
-    height: calc(88vh - 40px);
-    width: calc(30vw - 40px);
+    background-color: var(--grayBackground);
+    border-radius: 2rem;
+    padding: 2rem;
+    height: 100%;
+    width: var(--sideBarSize);
+    left: 0;
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 #menu-coords {
@@ -105,8 +127,8 @@ p {
     color: #888;
     font-weight: bold;
     border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 20px;
+    padding: 2rem;
+    margin-bottom: 1.5rem;
     user-select: text;
     -webkit-user-drag: all;
 }
@@ -116,8 +138,9 @@ p {
     border: none;
     border-radius: 10px;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
-    padding: 15px 10px;
+    padding: 2rem 2rem;
     margin: 20px 0;
+    width: 100%;
 }
 
 #desc {
@@ -125,8 +148,21 @@ p {
     border: none;
     border-radius: 10px;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
-    padding: 7px 10px;
+    padding: 2rem 2rem;
     resize: none;
+    height: 60%;
+    width: 100%;
+}
+
+#textsinputs {
+    width: auto;
+    height: 25rem;
+}
+
+#boxinfo {
+    width: auto;
+    height: 20rem;
+    padding-top: 1rem;
 }
 
 #event:focus-visible,
@@ -140,14 +176,15 @@ p {
 }
 
 #char-count-display {
-    font-weight: bold;
+    font-weight: normal;
     text-align: end;
+    margin: 1rem;
+
 }
 
 #menu-button {
-    position: absolute;
     align-self: center;
-    bottom: 20px;
+    margin-top: 2rem;
     width: 50%;
 }
 
@@ -175,7 +212,7 @@ p {
 }
 
 #modal-title {
-    font-weight: bold;
+    font-weight: normal;
     user-select: text;
     -webkit-user-drag: all;
 }
