--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,5 +1,7 @@
 :root {
     --grayBackground: #f5f5f5;
+    --sideBarSize: 30%;
+    --gap: 2rem;
 }
 
 * {
@@ -16,12 +18,19 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: var(--gap);
     margin: 0;
-    padding: 2rem;
+    padding: var(--gap);
     user-select: none;
     -webkit-user-drag: none;
     height: 100vh;
+}
+
+/* MAIN */
+
+#page {
+    height: 100vh;
+    width: 100%;
 }
 
 p {
@@ -33,6 +42,7 @@ p {
 
 #header {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     height: 7rem;
     width: 100%;
@@ -51,14 +61,12 @@ p {
 /* MAP */
 
 #content {
-    height: 100%;
-    width: 100%;
     position: relative;
-    --sideBarSize: 30%;
-    --mapGap: 2rem;
     display: flex;
     flex-direction: row;
     justify-content: right;
+    height: 100%;
+    width: 100%;
 }
 
 #map-window {
@@ -70,19 +78,22 @@ p {
     transition: width 0.5s ease-in-out;
 }
 
-#arrow {
+.map-icon {
     cursor: pointer;
     position: absolute;
     font-size: 4rem;
     color: white;
-    width: 1rem;
-    height: 1rem;
+    width: fit-content;
+    height: fit-content;
     z-index: 3;
     top: 0.25rem;
-    left: 0.1rem;
-    opacity: 0;
     transition: opacity 0.5s ease-in-out;
     filter: drop-shadow(0 0 0.25rem black);
+}
+
+#arrow {
+    display: none;
+    left: 0.1rem;
 }
 
 #map {
@@ -133,41 +144,26 @@ p {
     -webkit-user-drag: all;
 }
 
+#texts-inputs {
+    width: auto;
+    height: 25rem;
+}
+
 #event {
-    font-size: large;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
-    padding: 2rem 2rem;
     margin: 20px 0;
     width: 100%;
 }
 
 #desc {
-    font-size: large;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
-    padding: 2rem 2rem;
     resize: none;
     height: 60%;
     width: 100%;
 }
 
-#textsinputs {
-    width: auto;
-    height: 25rem;
-}
-
-#boxinfo {
+#box-info {
     width: auto;
     height: 20rem;
     padding-top: 1rem;
-}
-
-#event:focus-visible,
-#desc:focus-visible {
-    outline: none;
 }
 
 #event::placeholder,
@@ -183,9 +179,11 @@ p {
 }
 
 #menu-button {
+    position: absolute;
     align-self: center;
     margin-top: 2rem;
     width: 50%;
+    bottom: 2rem;
 }
 
 /* MARKER MODAL */
@@ -217,6 +215,20 @@ p {
     -webkit-user-drag: all;
 }
 
+/* TEXT INPUTS */
+
+.text-input {
+    font-size: large;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
+    padding: 2rem 2rem;
+}
+
+.text-input:focus-visible {
+    outline: none;
+}
+
 /* BUTTONS */
 
 .button {
@@ -238,4 +250,85 @@ p {
 .button:active {
     background-color: #155fc0;
     border: none;
+}
+
+.icon-btn {
+    text-align: center;
+    font-size: 3.2rem;
+}
+
+/* EVENT LIST */
+
+#list-title {
+    font-size: 3.5rem;
+    text-align: center;
+    margin: 0;
+}
+
+#open-list {
+    right: 0.8rem;
+    height: 4rem;
+}
+
+#list {
+    position: absolute;
+    background-color: var(--grayBackground);
+    border-radius: 20px;
+    padding: var(--gap);
+    right: 0;
+    height: 100%;
+    width: var(--sideBarSize);
+}
+
+#list-search {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 2rem 0;
+}
+
+#searchbar {
+    width: calc(100% - 8rem);
+}
+
+#search-btn {
+    padding: 10px;
+    width: 6rem;
+}
+
+#list-list {
+    width: 100%;
+    margin: 4rem 0;
+    padding: 0;
+}
+
+.list-event {
+    background-color: white;
+    border-radius: 2rem;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
+    margin: 2rem 0;
+    list-style: none;
+    font-size: 2rem;
+}
+
+.list-event summary {
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
+}
+
+.list-event-name {
+    font-weight: bold;
+    margin: auto 0;
+}
+
+.list-event-desc {
+    padding: 0 2rem 2rem;
+    margin: 0;
+}
+
+.list-event-btn {
+    padding: .5rem;
+    height: 4.5rem;
 }
